--- a/_config.yml
+++ b/_config.yml
@@ -55,3 +55,5 @@ header_pages:
   - preview.md
 # set the size of the text to 'large' or 'small', default is small
 font-size: small
+
+permalink: pretty
